--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 language: php
 
+env:
+  global:
+    - DEFAULT_COMPOSER_FLAGS="--no-interaction --no-ansi --no-progress --no-suggest"
+
 before_script:
   - wget https://getcomposer.org/composer.phar
   - chmod +x composer.phar
-  - ./composer.phar install
+  - ./composer.phar install $DEFAULT_COMPOSER_FLAGS
 
 
 script:
   - mkdir coverage-report
-  - ./bin/phpunit --coverage-clover coverage.xml --coverage-html coverage-report --log-tap tap.tap
+  - ./vendor/bin/phpunit --coverage-clover=coverage.xml --coverage-html coverage-report
