--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
-    "require": { 
-
+    "require": {
+    },
+    "require-dev": {
+        "phpunit/php-code-coverage": "^6.1",
+        "phpunit/phpunit": "^7.5"
     }
 }
