--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "require": {
     },
     "require-dev": {
-        "phpunit/php-code-coverage": "^6.1",
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^5.7",
+        "phpunit/php-code-coverage": "^4.0"
     }
 }
