--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ env:
 before_script:
   - wget https://getcomposer.org/composer.phar
   - chmod +x composer.phar
-  - composer.phar install $DEFAULT_COMPOSER_FLAGS
+  - ./composer.phar install $DEFAULT_COMPOSER_FLAGS
 
 script:
   - mkdir -p build/logs
