--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,6 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8.35",
-        "codacy/coverage": "dev-master",
-        "squizlabs/php_codesniffer": "^3.0.1"
+        "codacy/coverage": "dev-master"
     }
 }
