Fix some code style problems

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ script:
   - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
 after_script:
-  - vendor/bin/codacycoverage clover
+  - vendor/bin/codacycoverage clover build/logs/clover.xml
