--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "require": {
         "php": ">=5.3",
         "zendframework/zend-stdlib": "^2.0",
-        "zendframework/zendpdf": "^2.0"
+        "zendframework/zendpdf": "^2.0",
+        "symfony/polyfill-php54": "^1.11",
+        "symfony/polyfill-php55": "^1.11"
     },
     "autoload": {
         "psr-4": {
