--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,7 @@
     "type": "library",
     "license": "proprietary",
     "require": {
-        "php": ">=5.3",
-        "zendframework/zend-stdlib": "^2.0",
-        "zendframework/zendpdf": "^2.0",
-        "symfony/polyfill-php54": "^1.11",
-        "symfony/polyfill-php55": "^1.11"
+        "php": ">=5.3"
     },
     "autoload": {
         "psr-4": {
