--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,12 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8.35",
-        "codacy/coverage": "dev-master"
+        "codacy/coverage": "dev-master",
+        "gitonomy/gitlib": "1.0.4",
+        "phpdocumentor/reflection-docblock": "2.0.5",
+        "symfony/console": "2.8.50",
+        "symfony/debug": "2.8.50",
+        "symfony/process": "2.8.50",
+        "symfony/yaml": "2.8.50"
     }
 }
