--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "license": "proprietary",
     "require": {
-        "php": ">=5.3"
+      "php": ">=5.3.29"
     },
     "autoload": {
         "psr-4": {
@@ -19,13 +19,12 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8.35",
-        "codacy/coverage": "dev-master",
-        "gitonomy/gitlib": "1.0.4",
-        "phpdocumentor/reflection-docblock": "2.0.5",
-        "symfony/console": "2.8.50",
-        "symfony/debug": "2.8.50",
-        "symfony/process": "2.8.50",
-        "symfony/yaml": "2.8.50"
+      "phpunit/phpunit": "^4.8",
+      "codacy/coverage": "dev-master"
+    },
+  "config": {
+    "platform": {
+      "php": "5.3.29"
+    }
     }
 }
