CON-670: Check both versions

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,29 @@
 ---
 version: 2.1
 executors:
-  tester:
+  php-5.6:
     docker:
       - image: circleci/php:5.6
+  php-7.2:
+    docker:
       - image: circleci/php:7.2
 jobs:
-  tests:
-    executor: tester
+  tests-5.6:
+    executor: php-5.6
+    working_directory: ~/ecommerce_module_core
+    steps:
+      - checkout
+      - run:
+          name: Enable PHP modules
+          command: sudo -E docker-php-ext-install mysqli zip pdo pdo_mysql
+      - run:
+          name: Execute composer install
+          command: composer install
+      - run:
+          name: Run tests
+          command: php vendor/bin/phpunit --configuration phpunit.xml
+  tests-7.2:
+    executor: php-7.2
     working_directory: ~/ecommerce_module_core
     steps:
       - checkout
@@ -25,7 +41,13 @@ workflows:
   version: 2.1
   ecommerce_module_core:
     jobs:
-      - tests:
+      - tests-5.6:
+          filters:
+            tags:
+              only: /.*/
+            branches:
+              ignore: master
+      - tests-7.2:
           filters:
             tags:
               only: /.*/
