--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
       - run:
           name: Run tests
           command: php vendor/bin/phpunit --configuration phpunit.xml
-  tests-7:2:
+  tests-7_2:
     executor: php-7_2
     working_directory: ~/ecommerce_module_core
     steps:
