--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 
 # Custom content
 vendor
+/src/DemoUI/src/Views/resources/js/
+/src/DemoUI/src/Views/resources/images/
+/src/DemoUI/src/Views/resources/css/location/
