Add generic mechanism for translations
Issue: PLCR1801-12

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "license": "proprietary",
     "require": {
-      "php": ">=5.3.29"
+      "php": ">=5.3.29",
+      "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
