Add UI mechanism and login page without styles
Issue: PLCR1801-19, PLCR1801-21

--- a/src/DemoUI/composer.json
+++ b/src/DemoUI/composer.json
@@ -9,6 +9,7 @@
   "autoload": {
     "psr-4": {
       "Logeecom\\Infrastructure\\": "../Infrastructure",
+      "Logeecom\\Tests\\": "../../tests",
       "Packlink\\BusinessLogic\\": "../BusinessLogic",
       "Packlink\\DemoUI\\Lib\\": "Lib",
       "Packlink\\DemoUI\\": "src"
