--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,13 @@
     },
     "require-dev": {
       "phpunit/phpunit": "^4.8",
-      "codacy/coverage": "dev-master"
+      "codacy/coverage": "dev-master",
+      "leafo/scssphp": "0.0.12"
     },
+  "scripts": {
+    "post-update-cmd":  "php cssCompile.php",
+    "post-install-cmd": "php cssCompile.php"
+  },
   "config": {
     "platform": {
       "php": "5.3.29"
