--- a/src/DemoUI/.gitignore
+++ b/src/DemoUI/.gitignore
@@ -4,3 +4,4 @@ src/Views/resources/js/
 src/Views/resources/images/
 src/Views/resources/css/location/
 src/Views/resources/css/app.css
+src/Views/resources/css/.gitkeep
