Refactor Registration to eliminate hardcoded platform country code
PLCR24-10

--- a/src/DemoUI/composer.json
+++ b/src/DemoUI/composer.json
@@ -12,7 +12,8 @@
       "Logeecom\\Tests\\": "../../tests",
       "Packlink\\BusinessLogic\\": "../BusinessLogic",
       "Packlink\\DemoUI\\Lib\\": "Lib",
-      "Packlink\\DemoUI\\": "src"
+      "Packlink\\DemoUI\\": "src",
+      "Packlink\\Brands\\": "../Brands"
     }
   },
   "scripts": {
